--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -39,13 +39,13 @@
                 <label for="date">
                     <span>Date :</span>
                 </label>
-                <input type="text" id="date" placeholder="mm/dd/yyyy" oninput="myFunction('Date', 'date')"/>
+                <input type="date" id="date" placeholder="mm/dd/yyyy" oninput="myFunction('Date', 'date')"/>
             </p>
             <p>
                 <label for="email">
                     <span>Email :</span>
                 </label>
-                <input type="text" id="email" placeholder="john.doe@email.com" oninput="myFunction('Email', 'email')"/>
+                <input type="email" id="email" placeholder="john.doe@email.com" oninput="myFunction('Email', 'email')"/>
             </p>
             <p>
                 <label for="message">
